--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,4 @@ jobs:
       - run:
           name: Run tests
           command: |
-            pytest --run_stan_tests test
+            pipenv run pytest --run_stan_tests test
