--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
     - image: circleci/python:3.7.0
       environment:
-        PIPENV_VENV_IN_PROJECT: true
+        PIPENV_VENV_IN_PROJECT: "true"
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
