Pin pystan at 2.19.1.1 (avoid httpstan collision in 3.0.1)

--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ pyyaml = "*"
 statsmodels = "*"
 prettytable = "*"
 pipfile = "*"
-pystan = "*"
+pystan = "==2.19.1.1"
 matplotlib = "*"
 jupyter = "*"
 notebook = "*"
